[gd_scene load_steps=5 format=3 uid="uid://bn5ejjhc1ilkd"]

[ext_resource type="Script" path="res://scenes/character/character_controller.gd" id="1_4jcfo"]
[ext_resource type="PackedScene" uid="uid://c5ayda1k1ew1p" path="res://scenes/character/character_renderer.tscn" id="3_jqbfg"]

[sub_resource type="LabelSettings" id="LabelSettings_bf7nj"]
font_size = 14

[sub_resource type="LabelSettings" id="LabelSettings_luv78"]
font_size = 12

[node name="Character" type="Node2D" node_paths=PackedStringArray("renderer")]
script = ExtResource("1_4jcfo")
renderer = NodePath("CharacterRenderer")

[node name="CharacterRenderer" parent="." instance=ExtResource("3_jqbfg")]
position = Vector2(0, -12)

[node name="Name" type="Label" parent="."]
unique_name_in_owner = true
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -124.0
offset_right = 124.0
offset_bottom = 53.0
grow_horizontal = 2
grow_vertical = 0
label_settings = SubResource("LabelSettings_bf7nj")
horizontal_alignment = 1
clip_text = true

[node name="Talk" type="Label" parent="."]
z_index = 99
z_as_relative = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -149.0
offset_top = -197.0
offset_right = 147.0
offset_bottom = -49.0
grow_horizontal = 2
label_settings = SubResource("LabelSettings_luv78")
horizontal_alignment = 1
vertical_alignment = 2
autowrap_mode = 3
clip_text = true

[node name="TalkTimeout" type="Timer" parent="."]

[connection signal="timeout" from="TalkTimeout" to="." method="_on_talk_timeout_timeout"]
